<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutUs"
    android:orientation="vertical"
    android:background="@raw/srm2" >

    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/para1"
        android:layout_marginTop="1dp"
        
         />
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/para2"
        android:layout_marginTop="2dp"
         />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/para3"
        android:layout_marginTop="2dp"
         />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additional1"
        android:layout_marginTop="2dp"
         />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additional2"
        android:layout_marginTop="2dp"
         />
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/haka"
        android:layout_marginTop="2dp"
        android:textStyle="bold"
         />
     
       <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="1"
     android:layout_gravity="center|bottom"
     android:orientation="horizontal"
     android:layout_marginTop="150dp"
     >
 <Button android:layout_width="155dp"
        android:layout_height="60dp"
        android:layout_marginBottom="1dp"
       
        android:text="@string/campus"
        android:id="@+id/campus"
        android:background="@drawable/anim10"/>
 <Button android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginBottom="1dp"
        
        android:text="@string/accomodation"
        android:id="@+id/accommodation"
        android:background="@drawable/anim10"/>
 
    </LinearLayout>
    
     <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="1"
     android:layout_gravity="center|bottom"
     android:orientation="horizontal"
     android:layout_marginTop="4dp"
     >
       <Button 
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="2dp"
        
        android:id="@+id/Home1"
        android:background="@drawable/anim11"/>
     <Button 
          android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginBottom="1dp"
        
        android:text="@string/form"
        android:id="@+id/Form"
        android:background="@drawable/anim10"
          />
       
</LinearLayout>
</LinearLayout>
</ScrollView>