<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivitySrm"
    android:orientation="vertical"
    android:background="@raw/mainmain" >
    
    <Button 
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginLeft="-20dp"
android:layout_marginTop="260dp"
        android:text="@string/str1"
        android:id="@+id/But1"
        android:background="@drawable/anim9"
        
        />
    <Button 
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginLeft="-20dp"
android:layout_marginTop="15dp"
        
        android:text="@string/str2"
        android:id="@+id/But2"
        android:background="@drawable/anim9"
        
        />
    <Button 
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginLeft="-20dp"
android:layout_marginTop="15dp"
        android:text="@string/str3"
        android:id="@+id/But3"
        android:background="@drawable/anim9"
               />
     <Button 
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:gravity="center"
       android:layout_marginLeft="-20dp"
android:layout_marginTop="15dp"
        android:text="@string/str4"
        android:id="@+id/But4"
        android:background="@drawable/anim9"
        
        />
    <Button 
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginLeft="-20dp"
android:layout_marginTop="15dp"
        android:text="@string/str5"
        android:id="@+id/But5"
        android:background="@drawable/anim9"
        />
   
     <TextView 
         android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:text="@string/newz"
        
        />
    <TextView 
         android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newz"
        android:text="@string/news"
        />
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:background="@raw/codezac"
        android:contentDescription="@string/suck"
        />
   
    
    
</LinearLayout>
</ScrollView>